# oatpp-rest-ybs

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
resources/: config.json
sql/: 001_init.sql
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  Serializers.hpp
src/controller/: APIController.cpp  APIController.hpp
src/db/: SystemItemDb.hpp
src/dto/: ConfigDto.hpp  RequestDTOs.hpp  StatusDto.hpp
src/service/: SystemItemService.cpp  SystemItemService.hpp
utility/: install-oatpp-modules.sh
